# src/routes/courses.js
@@ -5,7 +5,8 @@ const router = express.Router();
 const courseController = require("../controllers/courseController");
 
 router.post("/create-new-courses", courseController.createNewCourses);
-router.get("/get-courses", courseController.getCourses);
+router.get("/get-all-courses", courseController.getAllCourses);
+router.get("/get-course-by-id", courseController.getCourseById);
 router.put("/update-courses", courseController.updateCourses);
 router.get("/delete-courses", courseController.deleteCourses);
 router.post("/register-courses", courseController.registerCourses);
